--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,22 @@
 body {
 	font-family: "PT Serif", Verdana, Arial, sans-serif;
 	font-size: 16px;
-	background-color: #eeeeee;
-	min-width: 1024px;
-	margin: 20px;
+	background-image: url("Images/Baby_Sleeping.jpg");
+	background-repeat: no-repeat;
+	background-size: contain;
+	margin: 0;
+}
+
+body#contact {
+	background-image: url(Images/Happy_Sleeping_Baby.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+#contact-form {
+	background-color: rgba(80, 5, 80, 0.85);
+	width: 100%;
+	height: 100vh;
 }
 
 h1 {
@@ -50,6 +63,31 @@ h3 {
 img {
 	margin: 10px 10px;
 	border-radius: 10px;
+}
+
+nav {
+	background-color: rgba(80, 5, 80, 0.85);
+	color: white;
+	margin-top: 0;
+}
+
+.navbar {
+	margin-top: 0;
+}
+
+.navbar-brand img {
+	border-radius: 0;
+}
+
+.nav-item {
+	margin-top: auto;
+	margin-bottom: auto;
+	color: white;
+	font-family: sans-serif;
+}
+
+.nav-link {
+	color: white;
 }
 
 #coffee-canephora {
